# serverino_demo_ispra

./: .gitignore  pyproject.toml
serverino/: __init__.py  app.py  elaborate.py  observations.py  raster.py  secrets.py  sentinel.py
tests/: test_serverino.py
